[package]
name = "rococo-chain-runtime-constants"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.37" }
primitives = { package = "polkadot-primitives", git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
runtime-common = { package = "polkadot-runtime-common", git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.37" }
sp-weights = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"primitives/std",
	"runtime-common/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-weights/std"
]
